--- a/arch/arm/configs/m7_stockclk_defconfig
+++ b/arch/arm/configs/m7_stockclk_defconfig
@@ -3729,3 +3729,11 @@ CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_KERNEL_MODE_NEON=y
 CONFIG_KSM_CHECK_PAGE=y
 CONFIG_CPU_BOOST=y
+CONFIG_INTELLI_PLUG=y
+CONFIG_POWERSUSPEND=y
+CONFIG_INTELLI_THERMAL=y
+CONFIG_THERMAL_MONITOR=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE is not set
+CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
