--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -3728,3 +3728,4 @@ CONFIG_BMA250_WAKE_OPTIONS=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_KERNEL_MODE_NEON=y
 CONFIG_KSM_CHECK_PAGE=y
+CONFIG_CPU_BOOST=y
