--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -58,6 +58,13 @@ config EARLYSUSPEND
 	---help---
 	  Call early suspend handlers when the user requested sleep state
 	  changes.
+	
+config POWERSUSPEND
+	bool "Power suspend"
+	default y
+	---help---
+	  Call early suspend handlers when the user requested sleep state
+	  changes.
 
 config SUSPEND_DISABLE_SPC
 	bool "Disable SPC when before entering suspend start"
