--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -3278,3 +3278,8 @@ config FORCE_FAST_CHARGE
 
 endif
 
+config MSM_SLEEPER
+    bool "Limit max frequency while screen is off"
+    default y
+    help
+      Limit max frequency while screen is off
