--- a/arch/arm/configs/m7_stockclk_defconfig
+++ b/arch/arm/configs/m7_stockclk_defconfig
@@ -3737,3 +3737,4 @@ CONFIG_THERMAL_MONITOR=y
 CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE is not set
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
+CONFIG_QUAD_CORES_SOC_STAT=y
