--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -3676,3 +3676,12 @@ CONFIG_HTC_POWEROFF_MODEM_IN_OFFMODE_CHARGING=y
 
 #For store modem reset information
 CONFIG_HTC_STORE_MODEM_RESET_INFO=y
+
+#Lunar Additions
+CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_VR=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
