--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -3704,3 +3704,4 @@ CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_VR=y
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE=y
