--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -3697,6 +3697,8 @@ CONFIG_HTC_POWEROFF_MODEM_IN_OFFMODE_CHARGING=y
 CONFIG_HTC_STORE_MODEM_RESET_INFO=y
 
 #Lunar Additions
+CONFIG_SOUND_CONTROL_HAX_GPL=y
+CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_ZEN=y
@@ -3704,4 +3706,15 @@ CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_VR=y
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CRYPTO_AES_ARM=y
+CONFIG_CRYPTO_SHA1_ARM=y
+CONFIG_FRANDOM=y
+CONFIG_RESTRICT_ROOTFS_SLAVE=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE=y
+CONFIG_CPUPOWER=y
+CONFIG_BMA250_ENABLE_INT1=y
+CONFIG_BMA250_ENABLE_INT2=y
+CONFIG_BMA250_WAKE_OPTIONS=y
+CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_KERNEL_MODE_NEON=y
+CONFIG_KSM_CHECK_PAGE=y
