--- a/arch/arm/configs/m7_stockclk_defconfig
+++ b/arch/arm/configs/m7_stockclk_defconfig
@@ -3698,9 +3698,9 @@ CONFIG_HTC_STORE_MODEM_RESET_INFO=y
 
 #Lunar Additions
 CONFIG_SOUND_CONTROL_HAX_GPL=y
-CONFIG_GPU_OVERCLOCK=y
-CONFIG_LOW_CPUCLOCKS=y
-CONFIG_CPU_OVERCLOCK=y
+#CONFIG_GPU_OVERCLOCK is not set
+#CONFIG_LOW_CPUCLOCKS is not set
+#CONFIG_CPU_OVERCLOCK is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_SIO=y
