--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -3701,6 +3701,7 @@ CONFIG_SOUND_CONTROL_HAX_GPL=y
 CONFIG_GPU_OVERCLOCK=y
 CONFIG_LOW_CPUCLOCKS=y
 CONFIG_CPU_OVERCLOCK=y
+CONFIG_MSM_CPUFREQ_LIMITER=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_SIO=y
