--- a/arch/arm/configs/m7_stockclk_defconfig
+++ b/arch/arm/configs/m7_stockclk_defconfig
@@ -3745,3 +3745,5 @@ CONFIG_KEXEC=y
 # CONFIG_ATAGS_PROC is not set
 CONFIG_KEXEC_HARDBOOT=y
 CONFIG_PROC_DEVICETREE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_OPTIMAX is not set
+CONFIG_CPU_FREQ_GOV_OPTIMAX=y
