msm: memutils: memcpy, memmove, copy_page optimization: Preload farther to take advantage of the memory bus, and assume 64-byte cache lines.  Unroll some pairs of ldm/stm as well, for unexplainable reasons.
Conflicts:
	arch/arm/configs/m8_defconfig
	arch/arm/lib/Makefile
	arch/arm/mach-msm/Kconfig

Conflicts:
	arch/arm/configs/m7_defconfig
	arch/arm/configs/m7_stockclk_defconfig

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -716,3 +716,4 @@ obj-$(CONFIG_FORCE_FAST_CHARGE) += fastchg.o
 obj-$(CONFIG_CPU_FREQ_MSM) += cpufreq.o
 obj-$(CONFIG_MSM_CPUFREQ_LIMITER) += cpufreq_limit.o
 obj-$(CONFIG_MSM_SLEEPER) += msm-sleeper.o
+obj-$(CONFIG_HAS_MACH_MEMUTILS) += memutils/
