--- a/arch/arm/configs/m7_stockclk_defconfig
+++ b/arch/arm/configs/m7_stockclk_defconfig
@@ -3738,3 +3738,6 @@ CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE is not set
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_MSM_SLEEPER=y
+CONFIG_ARM_PLD_64BYTE=y
+CONFIG_USE_LDRDSTRD_OVER_LDMSTM=y
+CONFIG_HAS_MACH_MEMUTILS=y
