--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -3717,6 +3717,7 @@ CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX_M7=y
 CONFIG_CPU_FREQ_GOV_SLIM=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SLIM is not set
 CONFIG_CRYPTO_AES_ARM=y
 CONFIG_CRYPTO_SHA1_ARM=y
 CONFIG_FRANDOM=y
