--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -97,7 +97,7 @@ config CPU_FREQ_DEFAULT_GOV_ONDEMAND
 	  driver. Fallback governor will be the performance governor.
 
 config CPU_FREQ_DEFAULT_GOV_SLIM
-	bool "elementalx"
+	bool "slim"
 	select CPU_FREQ_GOV_SLIM
 	select CPU_FREQ_GOV_PERFORMANCE
 	help
