--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -36,7 +36,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION="-Elite m7 Kernels-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -3676,3 +3676,5 @@ CONFIG_HTC_POWEROFF_MODEM_IN_OFFMODE_CHARGING=y
 
 #For store modem reset information
 CONFIG_HTC_STORE_MODEM_RESET_INFO=y
+
+#Elite Additions
