enable wake features

--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -3697,3 +3697,4 @@ CONFIG_HTC_POWEROFF_MODEM_IN_OFFMODE_CHARGING=y
 CONFIG_HTC_STORE_MODEM_RESET_INFO=y
 
 #Elite Additions
+CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE=y
