--- a/arch/arm/configs/m7_stockclk_defconfig
+++ b/arch/arm/configs/m7_stockclk_defconfig
@@ -3741,3 +3741,7 @@ CONFIG_MSM_SLEEPER=y
 CONFIG_ARM_PLD_64BYTE=y
 CONFIG_USE_LDRDSTRD_OVER_LDMSTM=y
 CONFIG_HAS_MACH_MEMUTILS=y
+CONFIG_KEXEC=y
+# CONFIG_ATAGS_PROC is not set
+CONFIG_KEXEC_HARDBOOT=y
+CONFIG_PROC_DEVICETREE=y
