--- a/arch/arm/configs/m7_stockclk_defconfig
+++ b/arch/arm/configs/m7_stockclk_defconfig
@@ -3747,3 +3747,4 @@ CONFIG_KEXEC_HARDBOOT=y
 CONFIG_PROC_DEVICETREE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_OPTIMAX is not set
 CONFIG_CPU_FREQ_GOV_OPTIMAX=y
+CONFIG_MSM_KGSL_SIMPLE_GOV=y
