--- a/arch/arm/configs/m7_stockclk_defconfig
+++ b/arch/arm/configs/m7_stockclk_defconfig
@@ -3748,3 +3748,5 @@ CONFIG_PROC_DEVICETREE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_OPTIMAX is not set
 CONFIG_CPU_FREQ_GOV_OPTIMAX=y
 CONFIG_MSM_KGSL_SIMPLE_GOV=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIMM is not set
+CONFIG_CPU_FREQ_GOV_INTELLIMM=y
