--- a/arch/arm/configs/m7_stockclk_defconfig
+++ b/arch/arm/configs/m7_stockclk_defconfig
@@ -3742,7 +3742,7 @@ CONFIG_ARM_PLD_64BYTE=y
 CONFIG_USE_LDRDSTRD_OVER_LDMSTM=y
 CONFIG_HAS_MACH_MEMUTILS=y
 CONFIG_KEXEC=y
-# CONFIG_ATAGS_PROC is not set
+CONFIG_ATAGS_PROC=y
 CONFIG_KEXEC_HARDBOOT=y
 CONFIG_PROC_DEVICETREE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_OPTIMAX is not set
