--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -42,7 +42,8 @@ CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
 CONFIG_HAVE_KERNEL_LZO=y
-CONFIG_KERNEL_GZIP=y
+CONFIG_HAVE_KERNEL_LZ4=y
+CONFIG_KERNEL_LZ4=y
 # CONFIG_KERNEL_LZMA is not set
 # CONFIG_KERNEL_XZ is not set
 # CONFIG_KERNEL_LZO is not set
@@ -3752,3 +3753,4 @@ CONFIG_CPU_FREQ_GOV_OPTIMAX=y
 CONFIG_MSM_KGSL_SIMPLE_GOV=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIMM is not set
 CONFIG_CPU_FREQ_GOV_INTELLIMM=y
+CONFIG_LZ4_COMPRESS=y
