add missing lz4 configs

--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -3664,7 +3664,7 @@ CONFIG_ZLIB_DEFLATE=y
 # CONFIG_LZO_DECOMPRESS is not set
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
-CONFIG_DECOMPRESS_GZIP=y
+# CONFIG_DECOMPRESS_GZIP is not set
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
@@ -3754,3 +3754,9 @@ CONFIG_MSM_KGSL_SIMPLE_GOV=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIMM is not set
 CONFIG_CPU_FREQ_GOV_INTELLIMM=y
 CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
+CONFIG_DECOMPRESS_LZ4=y
+CONFIG_RD_LZ4=y
+CONFIG_LZ4HC_COMPRESS=y
+CONFIG_CRYPTO_LZ4=y
+CONFIG_CRYPTO_LZ4HC=y
