--- a/arch/arm/configs/m7_stockclk_defconfig
+++ b/arch/arm/configs/m7_stockclk_defconfig
@@ -36,7 +36,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-EliteLunar"
+CONFIG_LOCALVERSION="-Elite-Sense443-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -72,7 +72,7 @@ CONFIG_TREE_PREEMPT_RCU=y
 CONFIG_PREEMPT_RCU=y
 CONFIG_RCU_FANOUT=32
 # CONFIG_RCU_FANOUT_EXACT is not set
-# CONFIG_RCU_FAST_NO_HZ is not set
+CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_TREE_RCU_TRACE is not set
 # CONFIG_RCU_BOOST is not set
 CONFIG_IKCONFIG=y
@@ -611,7 +611,6 @@ CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_CLEANCACHE=y
-CONFIG_FRONTSWAP=y
 # CONFIG_ARCH_MEMORY_PROBE is not set
 # CONFIG_ARCH_MEMORY_REMOVE is not set
 # CONFIG_ARCH_POPULATES_NODE_MAP is not set
@@ -3156,10 +3155,6 @@ CONFIG_STAGING=y
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
 CONFIG_QCACHE=y
-CONFIG_ZSMALLOC=y
-CONFIG_ZRAM=y
-CONFIG_ZRAM_DEBUG=y
-CONFIG_ZCACHE=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_USB_ENESTORAGE is not set
 # CONFIG_BCM_WIMAX is not set
@@ -3660,8 +3655,8 @@ CONFIG_LIBCRC32C=y
 # CONFIG_CRC8 is not set
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
-CONFIG_LZO_COMPRESS=y
-CONFIG_LZO_DECOMPRESS=y
+# CONFIG_LZO_COMPRESS is not set
+# CONFIG_LZO_DECOMPRESS is not set
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 # CONFIG_DECOMPRESS_GZIP is not set
@@ -3702,7 +3697,7 @@ CONFIG_HTC_POWEROFF_MODEM_IN_OFFMODE_CHARGING=y
 #For store modem reset information
 CONFIG_HTC_STORE_MODEM_RESET_INFO=y
 
-#Lunar Additions
+#Elite Additions
 CONFIG_SOUND_CONTROL_HAX_GPL=y
 #CONFIG_GPU_OVERCLOCK is not set
 #CONFIG_LOW_CPUCLOCKS is not set
@@ -3717,6 +3712,8 @@ CONFIG_IOSCHED_VR=y
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX_M7=y
+# CONFIG_CPU_FREQ_GOV_SLIM is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SLIM is not set
 CONFIG_CRYPTO_AES_ARM=y
 CONFIG_CRYPTO_SHA1_ARM=y
 CONFIG_FRANDOM=y
@@ -3730,6 +3727,16 @@ CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_KERNEL_MODE_NEON=y
 CONFIG_KSM_CHECK_PAGE=y
 CONFIG_CPU_BOOST=y
+CONFIG_ZCACHE=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_DEBUG=y
+CONFIG_ZSMALLOC=y
+CONFIG_QCACHE=y
+CONFIG_FRONTSWAP=y
+CONFIG_ZRAM_FOR_ANDROID=y
+CONFIG_SWAP=y
+CONFIG_CGROUP_MEM_RES_CTLR=y
+CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
 CONFIG_INTELLI_PLUG=y
 CONFIG_POWERSUSPEND=y
 CONFIG_INTELLI_THERMAL=y
